# study_cases_cpp

./: README.md
GLSL basics/: GLSL_tutor_fadeout.txt  GLSL_tutor_gauss.rtf  GLSL_tutor_grayout_tex.txt  GLSL_tutor_move_tex.txt
cpp_semples/: birthday_paradox.py  birthday_paradox_2.py  cmake_tricks.txt  main (binary tree).cpp  main (dynamic programming).cpp  main (linear time sorting).cpp  main (max product sequence).cpp  main (oreder statistic).cpp  main (permutation).cpp  main (sorted vector).cpp  main_max_subarray.cpp  main_real_estate_brocker.cpp  main_strassen_matrix_mult.cpp  main_variant_res_handler.cpp  monte_carlo.py  palindrom_string_challenge.cpp
esp/CommunicationDemo/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp/CommunicationDemo/Tasks/: TestTask.cpp  TestTask.h
esp/CommunicationDemo/Wrappers/: I2CPort.cpp  I2CPort.h  Queue.h  task_helper.h
esp/CommunicationDemo/main/: CMakeLists.txt  main.cpp
esp/cpp_api/: CMakeLists.txt  sdkconfig
esp/cpp_api/components/cpp_event_loop/: CMakeLists.txt  espcomponent.cpp  espcomponent.h  espevent.cpp  espevent.h  espeventloop.h
esp/cpp_api/main/: main.cpp
esp/ftdi_i2c_comm/: CMakeLists.txt  main.cpp
esp/ftdi_i2c_comm_MPSSE/: CMakeLists.txt  main.cpp
think-cell/: main.cpp
